--- a/architecturalevalution.html
+++ b/architecturalevalution.html
@@ -96,7 +96,7 @@
         <br style="font-family:verdana; position:relative; left:240px;">Clients Brief Specification<br>
     </p>
     <div class="sidenav">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
