--- a/construct.html
+++ b/construct.html
@@ -90,7 +90,7 @@
     </h1>
     <p style="font-family:verdana; position:relative; left:240px;"> After the preparation of construction specifications, material schedule, rate fixation by working drawings, setting out the building in ground, we start the work.</p>
     <div class="sidenav">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
