--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,7 @@
         <br style="font-family:verdana; position:relative; left:240px;">Email : giriconstrunctions123@gmail.com <br>
     </p>
     <div class="sidenav">
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
