--- a/design.html
+++ b/design.html
@@ -90,7 +90,7 @@
     </h1>
     <p style="font-family:verdana; position:relative; left:240px;"> After the floor plan is finalized by client's approval by absorbing client's reflection we deliver the Architectural Rendings which shows how your proposed house would be.</p>
     <div class="sidenav">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
