--- a/detailing.html
+++ b/detailing.html
@@ -93,7 +93,7 @@
         in a boundary, a boundary in an environment. Our design and construction teams are motivated towards creation of new things such as learning of new thoughts not to work in conventional manner, playing with new dimension and shapes. We are having
         as our hobby and passion</p>
     <div class="sidenav">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
