--- a/gallery.html
+++ b/gallery.html
@@ -264,7 +264,7 @@
         }
     </script>
     <div class="sidenav">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
