--- a/plan.html
+++ b/plan.html
@@ -90,7 +90,7 @@
     </h1>
     <p style="font-family:verdana; position:relative; left:240px;">By the requirements given by client, we prepare scheme floor plan, with Architectural Interior, Landscape Responsibilities and Vasthu considerations, Ventilation, efficiency, economy, functionality and budget</p>
     <div class="sidenav">
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="profile.html">Profile</a>
         <a href="architecturalevalution.html">Architectural Evaluation</a>
         <a href="plan.html">Plan</a>
