--- a/gallery.html
+++ b/gallery.html
@@ -272,6 +272,7 @@
         <a href="detailing.html">Detailing</a>
         <a href="construct.html">Construct</a>
         <a href="contact.html">Contact</a>
+        <a href="gallery.html">Gallery</a>
     </div>
 
 </body>
