--- a/gallery.html
+++ b/gallery.html
@@ -174,53 +174,53 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_32_ .png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_32_ .png" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_32_ .pngPicture_1_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_32_ .pngPicture_1_.png" style="width:100%">
 
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_32_ .pngPicture_2_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_32_ .pngPicture_2_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">4 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_4_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_4_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">5 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_3_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_3_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">6 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_21_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_21_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">7 / 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_20_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_20_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">8 / 10</div>
-            <img src"giriconstructions.com/public/playground_assets/Picture_15_.png" style="width:100%">
+            <img src"https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_15_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">9/ 10</div>
-            <img src="giriconstructions.com/public/playground_assets/Picture_16_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_16_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
             <div class="numbertext">9/ 10</div>
-            <img src=""giriconstructions.com/public/playground_assets/Picture_14_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_14_.png" style="width:100%">
 
         </div>
 
