--- a/gallery.html
+++ b/gallery.html
@@ -179,13 +179,13 @@
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 10</div>
-            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_32_ .pngPicture_1_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_1_.png" style="width:100%">
 
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 10</div>
-            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_32_ .pngPicture_2_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_2_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
