--- a/gallery.html
+++ b/gallery.html
@@ -210,7 +210,7 @@
         </div>
         <div class="mySlides fade">
             <div class="numbertext">8 / 10</div>
-            <img src"https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_15_.png" style="width:100%">
+            <img src="https://akash-m-2001.github.io/giriconstructions.com/public/playground_assets/Picture_15_.png" style="width:100%">
 
         </div>
         <div class="mySlides fade">
